Fix color contrast problem with highlight labels

--- a/src/headings.css
+++ b/src/headings.css
@@ -2,6 +2,7 @@
 
 div {
   --illini-orange: #ff552e;
+  --altgeld: #c84113;
 }
 
 [role='option'] {
@@ -12,7 +13,7 @@ div {
 
 [role='option'][aria-selected='true'],
 [role='option'][aria-selected='true']:hover {
-  outline-color: var(--illini-orange);
+  outline-color: var(--altgeld);
 }
 
 .h1-name, .h2-name, .h3-name, .h4-name, .h5-name, .h6-name {
